Player names, better mouse movement, styling inputs, clearing nodeCandidate on mouseleave

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Sprouts by Kamil Mielnik</title>
+    <title>Sprouts</title>
     <meta charset="utf-8">
     <meta name="author" content="Kamil Mielnik">
     <meta name="keywords" content="Sprouts, JavaScript, JS, Kamil Mielnik, Kraków">
